<resources>
    <string name="app_name">s185146 Anders Eisenhardts galgeleg</string>


    <!-- keys -->
    <string name="name_key">name</string>
    <string name="game_select_key">0</string>
    <string name="highscore_key">0</string>
    <string name="tries">0</string>

    <string name="frontPagePicture">Hangman billede</string>
    <string name="normalGame">Start normal game</string>
    <string name="DR">Game with words from DR.dk</string>
    <string name="spreadsheet">Game with words from spreadsheet</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="welcome_text">Welcome to this simple Hangman APP, made by: s185146</string>
    <string name="gamepagepicture">game_Page_Picture</string>

    <string name="fixedText">Welcome to this Hangman game, </string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="wordfield">Please submit first guess</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="won_or_lost">wonOrLost</string>
    <string name="play_again">Play again!</string>
    <string name="tries_or_word">triesOrWord</string>
    <string name="highscore">HIGHSCORE</string>


    <string-array name="colors">
        <item>#39add1</item>
        <item>#e15258</item>
    </string-array>
</resources>
